// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenesesSummary correctly for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $2,345.00
  </h1>
</div>
`;

exports[`should render ExpenesesSummary correctly for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1,095.00
  </h1>
</div>
`;
